[r=blake-rouse][bug=1510455,1510468,1513391][author=ricgard] Filesystems table layout fix and button spacing

--- a/src/maasserver/static/scss/maas/components/_placeholders.scss
+++ b/src/maasserver/static/scss/maas/components/_placeholders.scss
@@ -150,7 +150,7 @@
 
 %margin-left,
 .margin-left {
-    margin-left: 20px;
+    margin-left: 20px !important;
 
     &--ten {
         margin-left: 10px !important;
